gtsamAddTestsGlob(EnergyOptNLP "test*.cpp" "" "${CONVENIENCE_LIB_NAME}")
# ADD_EXECUTABLE(testOpt testOptimize.cpp)
# TARGET_LINK_LIBRARIES(testOpt ${CONVENIENCE_LIB_NAME})
# ADD_EXECUTABLE(testTask1 testTaskSetGenerate.cpp)
# TARGET_LINK_LIBRARIES(testTask1 ${CONVENIENCE_LIB_NAME})
# ADD_EXECUTABLE(GenerateTaskSet GenerateTaskSet.cpp)
# TARGET_LINK_LIBRARIES(GenerateTaskSet ${CONVENIENCE_LIB_NAME})
# ADD_EXECUTABLE(sa1 testOptimizeSA.cpp)
# TARGET_LINK_LIBRARIES(sa1 ${CONVENIENCE_LIB_NAME})
ADD_EXECUTABLE(tBatch1 tBatch.cpp)
TARGET_LINK_LIBRARIES(tBatch1 ${CONVENIENCE_LIB_NAME})
# ADD_EXECUTABLE(testGraph1 testBGL_usage.cpp)
# TARGET_LINK_LIBRARIES(testGraph1 ${CONVENIENCE_LIB_NAME})
# ADD_EXECUTABLE(saaa sa_functions.cpp)
# TARGET_LINK_LIBRARIES(saaa ${CONVENIENCE_LIB_NAME})
ADD_EXECUTABLE(runSingle testRunSingle.cpp)
TARGET_LINK_LIBRARIES(runSingle ${CONVENIENCE_LIB_NAME})
# ADD_EXECUTABLE(testDBF_M testDBF_Multi.cpp)
# TARGET_LINK_LIBRARIES(testDBF_M ${CONVENIENCE_LIB_NAME})

# include(GoogleTest)
# gtest_discover_tests(testdbfn)
# ADD_EXECUTABLE(exam example_boost.cpp)
# TARGET_LINK_LIBRARIES(exam ${CONVENIENCE_LIB_NAME})
# ADD_EXECUTABLE(to2 testOptimize_coreNumber.cpp)
# TARGET_LINK_LIBRARIES(to2 ${CONVENIENCE_LIB_NAME})
# ADD_EXECUTABLE(testFactor testTasks.cpp)
# TARGET_LINK_LIBRARIES(testTask ${CONVENIENCE_LIB_NAME})
# ADD_EXECUTABLE(testRTA testResponseTimeAnalysis.cpp)
# TARGET_LINK_LIBRARIES(testRTA ${CONVENIENCE_LIB_NAME})
# ADD_EXECUTABLE(testEnergy1 testEnergy.cpp)
# TARGET_LINK_LIBRARIES(testEnergy1 ${CONVENIENCE_LIB_NAME})
# ADD_EXECUTABLE(testCompare1 testCompare.cpp)
# TARGET_LINK_LIBRARIES(testCompare1 ${CONVENIENCE_LIB_NAME})
# ADD_EXECUTABLE(testScratch1 testScratch.cpp)
# TARGET_LINK_LIBRARIES(testScratch1 ${CONVENIENCE_LIB_NAME})
